--- a/client/app/app.less
+++ b/client/app/app.less
@@ -1,7 +1,13 @@
-@import '../bower_components/font-awesome/less/font-awesome.less';
 
 
-@fa-font-path: '../bower_components/font-awesome/fonts';
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+  height: 100%;
+}
+
 
 /**
  * App-wide Styles
@@ -22,7 +28,11 @@
 }
 
 /* inject:less */
-@import 'main/main.less';
+@import 'styles/buttons.less';
+@import 'styles/colors.less';
+@import 'styles/inputs.less';
+@import 'styles/layout.less';
+@import '../components/bbq-feedback/bbq-feedback.less';
 @import '../components/bbq-login/bbq-login.less';
 @import '../components/footer/footer.less';
 /* endinject */
