--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -4,22 +4,33 @@
   .title-container
     h1 What do you want to let us know?
 
-.container
 
-  form(ng-if='! successful' name='feedbackForm', autocomplete='off' ng-submit='submitFeedback(feedbackForm, feedback)' novalidate)
+.container(ng-if='! successful')
+  form(name='feedbackForm', autocomplete='off' ng-submit='submitFeedback(feedbackForm, feedback, contact, name)' novalidate)
+
+
     md-input-container
       label Feedback
-      textarea(name='feedback' ng-model='feedback.feedback' require='true' autocomplete='off')
+      textarea(name='feedbackName' ng-model='feedback' required='true' autocomplete='off')
+
+      div(ng-show='feedbackForm.$submitted || feedbackForm.feedbackName.$touched'
+      ng-messages="feedbackForm.feedbackName.$error" md-auto-hide="true")
+        div(ng-message='required') You need to enter some feedback
+        div(ng-message='feedback') Looks like something went wrong trying to submit your feedback. Try again.
+
     md-input-container
       label Name (Optional)
-      input(name='name' ng-model='feedback.name' autocomplete='off')
+      input(name='name' ng-model='name' autocomplete='off')
+
     md-input-container
       label Contact (Optional)
-      input(name='contact' ng-model='feedback.contact' autocomplete='off')
+      input(name='contact' ng-model='contact' autocomplete='off')
+
     md-button(type='submit') Submit
 
 
-  form(ng-if='successful', novalidate)
-    h3 Feedback sent!
+.container(ng-if='successful')
+  form(novalidate)
+    h2.deep-blue.feedback-success Feedback sent!
 
     md-button(ng-click='resetFeedback()', type='button') New feedback
