--- a/client/components/bbq-feedback/bbq-feedback.less
+++ b/client/components/bbq-feedback/bbq-feedback.less
@@ -1,21 +1,22 @@
 
 
 
-bbq-login {
+bbq-feedback {
   display: block;
   width: 100%;
   height: 100%;
 
-
-  form {
-
-    input {
-      width: 100%;
-    }
-
-    input, button {
-      margin: 6px 0;
-    }
+  .title {
 
   }
+
+  position: absolute;
+  min-height: 100%;
+
+  background-color: @light-green-yellow;
+
+  .feedback-success {
+    text-align: center;
+  }
+
 }
