--- a/client/components/bbq-login/bbq-login.less
+++ b/client/components/bbq-login/bbq-login.less
@@ -6,16 +6,26 @@ bbq-login {
   width: 100%;
   height: 100%;
 
-
-  form {
-
-    input {
-      width: 100%;
+  .title {
+    background-color: @dark-grey;
+    h1 {
+      color: @button-grey;
     }
-
-    input, button {
-      margin: 6px 0;
-    }
-
   }
+
+
+  .second-token-sent {
+    text-align: center;
+  }
+  .code-introduction {
+    color: #005e9c;
+    font-size: 1.2em;
+    margin: 20px 0;
+  }
+
+  background-color: @button-grey;
+
+  position: absolute;
+  min-height: 100%;
+
 }
