--- a/client/app/styles/inputs.less
+++ b/client/app/styles/inputs.less
@@ -1,5 +1,9 @@
 
 
+label, input, textarea {
+  font-size: 1.2em;
+}
+
 
 
 input {
@@ -15,6 +19,8 @@ input {
   &:focus {
     outline: none;
   }
+
+
 
 }
 
