--- a/client/components/bbq-login/bbq-login.less
+++ b/client/components/bbq-login/bbq-login.less
@@ -16,11 +16,24 @@ bbq-login {
 
   .second-token-sent {
     text-align: center;
+    display: block;
   }
+
   .code-introduction {
+    display: block;
     color: #005e9c;
     font-size: 1.2em;
     margin: 20px 0;
+    .first {
+      margin: 0;
+    }
+    .second {
+      margin-bottom: 0;
+      word-break: break-all;
+    }
+    p {
+      font-size: 1.2em;
+    }
   }
 
   background-color: @button-grey;
