--- a/client/components/bbq-login/bbq-login.jade
+++ b/client/components/bbq-login/bbq-login.jade
@@ -10,50 +10,54 @@
 
 .container.login-container(ng-if='! successfulTokenSent')
 
-  form(name='emailRegisterForm' ng-submit='submitEmail(emailRegisterForm, email)' novalidate=''
-      autocomplete='off')
+  .inner-container
+
+    form(name='emailRegisterForm' ng-submit='submitEmail(emailRegisterForm, email)' novalidate=''
+        autocomplete='off')
 
 
-    md-input-container
-      label Enter your work email address
-      input(name='email' ng-model='email', required='true' type='email', autocomplete='off')
+      md-input-container
+        label Enter your work email address
+        input(name='email' ng-model='email', required='true' type='email', autocomplete='off')
 
-      div(ng-show='emailRegisterForm.$submitted || emailRegisterForm.email.$touched'
-      ng-messages="emailRegisterForm.email.$error" md-auto-hide="true")
-        div(ng-message='email') That email doesn't look quite right
-        div(ng-message='required') We need your email address
+        div(ng-show='emailRegisterForm.$submitted || emailRegisterForm.email.$touched'
+        ng-messages="emailRegisterForm.email.$error" md-auto-hide="true")
+          div(ng-message='email') That email doesn't look quite right
+          div(ng-message='required') We need your email address
 
 
-    md-button(type='submit') Next
+      md-button(type='submit') Next
 
 
 .container.login-container(ng-if='successfulTokenSent')
-  form(name='tokenRegisterForm', ng-submit='submitToken(tokenRegisterForm, registerToken)', novalidate, autocomplete='off')
+
+  .inner-container
+
+    form(name='tokenRegisterForm', ng-submit='submitToken(tokenRegisterForm, registerToken)', novalidate, autocomplete='off')
+
+      md-content.code-introduction
+        p.first We have sent you an email. Enter the code you see in your inbox for:
+        p.second
+         b {{email}}
 
 
-    md-content.code-introduction
-      p.first We have sent you an email. Enter the code you see in your inbox for:
-      p.second
-       b {{email}}
+      md-input-container
+        label Enter the 5 digit code
+        input(name='registerToken' ng-model='registerToken', required='true', type='number', autocomplete='off'
+          ng-minlength='5' ng-maxlength='5' maxlength='5')
+
+        div(ng-show='tokenRegisterForm.$submitted || tokenRegisterForm.registerToken.$touched'
+        ng-messages="tokenRegisterForm.registerToken.$error" md-auto-hide="true")
+          div(ng-message='required') You need to enter the code we sent you.
+          div(ng-message='minlength') You haven't quite entered 5 digits
+          div(ng-message='maxlength') You have entered too many digits
+          div(ng-message='token') That token did not match the one we sent
+
+      md-button(type='submit') Login
 
 
-    md-input-container
-      label Enter the 5 digit code
-      input(name='registerToken' ng-model='registerToken', required='true', type='number', autocomplete='off'
-        ng-minlength='5' ng-maxlength='5' maxlength='5')
+      md-content(ng-if='tokenTimedout')
+        md-button.link-button(type='button', ng-click='resendTokenEmail(email)') I did not get an email
 
-      div(ng-show='tokenRegisterForm.$submitted || tokenRegisterForm.registerToken.$touched'
-      ng-messages="tokenRegisterForm.registerToken.$error" md-auto-hide="true")
-        div(ng-message='required') You need to enter the code we sent you.
-        div(ng-message='minlength') You haven't quite entered 5 digits
-        div(ng-message='maxlength') You have entered too many digits
-        div(ng-message='token') That token did not match the one we sent
-
-    md-button(type='submit') Login
-
-
-    md-content(ng-if='tokenTimedout')
-      md-button.link-button(type='button', ng-click='resendTokenEmail(email)') I did not get an email
-
-    md-content(ng-if='successfulResentToken')
-      label.deep-blue.second-token-sent Another email has been sent
+      md-content(ng-if='successfulResentToken')
+        label.deep-blue.second-token-sent Another email has been sent
