--- a/client/components/bbq-login/bbq-login.less
+++ b/client/components/bbq-login/bbq-login.less
@@ -6,6 +6,10 @@ bbq-login {
   width: 100%;
   height: 100%;
 
+  .container .inner-container {
+    max-width: 400px;
+  }
+
   .title {
     background-color: @dark-grey;
     h1 {
