--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -25,9 +25,20 @@ button.md-button {
 
   padding: 0 24px;
   margin: 12px 0;
-  color: @green-yellow;
   font-weight: 700;
 
+  color: @green-yellow;
+  &.grey-button {
+    color: @button-grey;
+  }
+
   font-size: 1em;
+
+
+  height: 50px;
+
+  md-progress-circular {
+    margin: 0 auto;
+  }
 
 }
