--- a/client/components/bbq-login/bbq-login.less
+++ b/client/components/bbq-login/bbq-login.less
@@ -18,6 +18,10 @@ bbq-login {
   }
 
 
+  .token-input {
+    letter-spacing: 0.5em;
+  }
+
   .second-token-sent {
     text-align: center;
     display: block;
