--- a/client/app/styles/layout.less
+++ b/client/app/styles/layout.less
@@ -52,10 +52,21 @@ form {
 }
 
 
+
+
+#main-ui-view {
+
+  &.ng-enter         { animation: scaleUp 0.5s both ease-in; }
+  &.ng-leave         { display: none; }
+}
+
+
+
+
 .container.ng-enter,
-.container.ng-leave
+//.container.ng-leave
 {
-  position: absolute;
+//  position: absolute;
   transition: opacity cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
 }
 
