--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -14,6 +14,10 @@ button {
 
 button.md-button {
   border-radius: 0;
+  font-size: 1em;
+  height: 50px;
+
+
   span {
     text-transform: none;
   }
@@ -32,13 +36,15 @@ button.md-button {
     color: @button-grey;
   }
 
-  font-size: 1em;
-
-
-  height: 50px;
 
   md-progress-circular {
     margin: 0 auto;
   }
 
+}
+
+
+
+md-toast button.md-button {
+  height: auto;
 }
