Only show sync toast if forms synced

--- a/client/app/styles/progress.less
+++ b/client/app/styles/progress.less
@@ -1,13 +1,18 @@
 
 md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle {
-  border-left-color: @deep-blue;
+  border-left-color: @green-yellow;
 }
 md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
-  border-right-color: @deep-blue;
+  border-right-color: @green-yellow;
+}
+
+md-progress-circular.md-default-theme .md-inner .md-gap, md-progress-circular .md-inner .md-gap {
+  border-top-color: @green-yellow;
+  border-bottom-color: @green-yellow;
 }
 
 
-
-
-
+md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle, md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
+  border-top-color: @green-yellow;
+}
 
