--- a/client/app/app.less
+++ b/client/app/app.less
@@ -7,7 +7,7 @@ html, body {
   overflow-x: hidden;
   height: 100%;
 
-  background-color: @light-green-yellow;
+  background-color: @light-grey;
 }
 
 
@@ -38,4 +38,5 @@ html, body {
 @import 'styles/progress.less';
 @import '../components/bbq-feedback/bbq-feedback.less';
 @import '../components/bbq-login/bbq-login.less';
+@import '../components/navbar/navbar.less';
 /* endinject */
