--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -25,15 +25,15 @@ button.md-button {
     border-radius: 0;
   }
 
-  border: 1px solid @button-grey;
+  border: 2px solid @button-grey;
 
   padding: 0 24px;
   margin: 12px 0;
   font-weight: 700;
 
-  color: @green-yellow;
+  color: @deep-blue;
   &.grey-button {
-    color: @button-grey;
+    color: @deep-blue;
   }
 
 
