--- a/client/app/styles/colors.less
+++ b/client/app/styles/colors.less
@@ -16,8 +16,10 @@
 @deep-blue: #005e9c;
 @light-blue: #a6c7dc;
 
+
 @grey: #afb4b6;
 @light-grey: #dce1e2;
+@medium-grey: #848d90;
 @dark-grey: #364449;
 
 
