--- a/client/app/styles/progress.less
+++ b/client/app/styles/progress.less
@@ -1,18 +1,20 @@
 
+@progress-color: @deep-blue;
+
 md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle {
-  border-left-color: @green-yellow;
+  border-left-color: @progress-color;
 }
 md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
-  border-right-color: @green-yellow;
+  border-right-color: @progress-color;
 }
 
 md-progress-circular.md-default-theme .md-inner .md-gap, md-progress-circular .md-inner .md-gap {
-  border-top-color: @green-yellow;
-  border-bottom-color: @green-yellow;
+  border-top-color: @progress-color;
+  border-bottom-color: @progress-color;
 }
 
 
 md-progress-circular.md-default-theme .md-inner .md-left .md-half-circle, md-progress-circular .md-inner .md-left .md-half-circle, md-progress-circular.md-default-theme .md-inner .md-right .md-half-circle, md-progress-circular .md-inner .md-right .md-half-circle {
-  border-top-color: @green-yellow;
+  border-top-color: @progress-color;
 }
 
