--- a/client/components/bbq-feedback/bbq-feedback.less
+++ b/client/components/bbq-feedback/bbq-feedback.less
@@ -6,14 +6,14 @@ bbq-feedback {
   width: 100%;
   height: 100%;
 
-  .title {
-
-  }
 
   position: absolute;
   min-height: 100%;
 
-  background-color: @light-green-yellow;
+  form, .container {
+    background-color: #fff;
+  }
+  background-color: #fff;
 
   .feedback-success {
     text-align: center;
