--- a/client/components/bbq-login/bbq-login.less
+++ b/client/components/bbq-login/bbq-login.less
@@ -2,24 +2,23 @@
 
 
 bbq-login {
+
   display: block;
   width: 100%;
   height: 100%;
+
+  form {
+    background-color: @light-grey;
+  }
 
   .container .inner-container {
     max-width: 400px;
   }
 
-  .title {
-    background-color: @dark-grey;
-    h1 {
-      color: @button-grey;
-    }
-  }
 
 
   .token-input {
-    letter-spacing: 0.5em;
+//    letter-spacing: 0.5em;
   }
 
   .second-token-sent {
@@ -43,8 +42,6 @@ bbq-login {
       font-size: 1.2em;
     }
   }
-
-  background-color: @button-grey;
 
   position: absolute;
   min-height: 100%;
