added arrow svgs

--- a/client/components/bbq-feedback/bbq-feedback.jade
+++ b/client/components/bbq-feedback/bbq-feedback.jade
@@ -39,6 +39,7 @@ navbar
 
       md-button(type='submit')
         span(ng-hide='submitting') Submit
+          right-arrow-svg
         md-progress-circular(ng-show='submitting' md-mode='indeterminate')
 
 
