--- a/client/components/bbq-login/bbq-login.jade
+++ b/client/components/bbq-login/bbq-login.jade
@@ -30,6 +30,7 @@ navbar
 
       md-button(type='submit')
         span(ng-hide='submitting') Next
+          right-arrow-svg
         md-progress-circular(ng-show='submitting' md-mode='indeterminate')
 
 
@@ -67,6 +68,7 @@ navbar
 
       md-button(type='submit')
         span(ng-hide='submittingFirstToken') Login
+          right-arrow-svg
         md-progress-circular(ng-show='submittingFirstToken' md-mode='indeterminate')
 
 
