--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -3,5 +3,8 @@
 
 .navbar-container-outer
   .navbar-container-inner
+
+    .beta DEMO
+
     .logo-container
       include ../../assets/svg/logo.svg
