--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -37,6 +37,18 @@ button.md-button {
   }
 
 
+  right-arrow-svg {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    svg {
+      height: 20px;
+      margin-left: 10px;
+      top: 4px;
+      position: relative;
+    }
+  }
+
   md-progress-circular {
     margin: 0 auto;
   }
