--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -19,4 +19,15 @@
 navbar {
   min-height: 80px;
   display: block;
+
+  .beta {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 20px;
+    color: @green-yellow;
+    font-weight: 700;
+  }
 }
