--- a/client/app/app.less
+++ b/client/app/app.less
@@ -36,6 +36,7 @@ html, body {
 @import 'styles/inputs.less';
 @import 'styles/layout.less';
 @import 'styles/progress.less';
+@import 'styles/toast.less';
 @import '../components/bbq-feedback/bbq-feedback.less';
 @import '../components/bbq-login/bbq-login.less';
 @import '../components/navbar/navbar.less';
