--- a/client/app/styles/buttons.less
+++ b/client/app/styles/buttons.less
@@ -2,20 +2,16 @@
 
 
 
-button {
-  border-radius: 0;
 
-  padding: 6px 12px;
-  background-color: transparent;
-  border-style: solid;
+button.md-button:not(.md-icon-button):not(.menu-button) {
 
-}
-
-
-button.md-button {
   border-radius: 0;
   font-size: 1em;
   height: 54px;
+
+
+  background-color: transparent;
+
 
 
   span {
