--- a/client/components/bbq-login/bbq-login.less
+++ b/client/components/bbq-login/bbq-login.less
@@ -7,7 +7,7 @@ bbq-login {
   width: 100%;
   height: 100%;
 
-  form {
+  form, md-content {
     background-color: @light-grey;
   }
 
@@ -15,15 +15,17 @@ bbq-login {
     max-width: 400px;
   }
 
-
-
-  .token-input {
-//    letter-spacing: 0.5em;
-  }
-
   .second-token-sent {
     text-align: center;
     display: block;
+  }
+
+  input {
+    font-weight: bold;
+  }
+
+  .email-title {
+    word-break: break-all;
   }
 
   .code-introduction {
